# tidy-container

./: .gitignore  CMakeLists.txt  README.md  tidystring.h  tidyvector.h
tests/: CMakeLists.txt
tests/containers/sequences/vector/: asan.pass.cpp  asan_throw.pass.cpp  const_value_type.pass.cpp  contiguous.pass.cpp  db_back.pass.cpp  db_cback.pass.cpp  db_cfront.pass.cpp  db_cindex.pass.cpp  db_front.pass.cpp  db_index.pass.cpp  db_iterators_2.pass.cpp  db_iterators_3.pass.cpp  db_iterators_4.pass.cpp  db_iterators_5.pass.cpp  db_iterators_6.pass.cpp  db_iterators_7.pass.cpp  db_iterators_8.pass.cpp  iterators.pass.cpp  types.pass.cpp  version.pass.cpp
tests/containers/sequences/vector/vector.capacity/: capacity.pass.cpp  reserve.pass.cpp  resize_size.pass.cpp  resize_size_value.pass.cpp  shrink_to_fit.pass.cpp  swap.pass.cpp
tests/containers/sequences/vector/vector.cons/: assign_copy.pass.cpp  assign_initializer_list.pass.cpp  assign_move.pass.cpp  assign_size_value.pass.cpp  construct_default.pass.cpp  construct_iter_iter.pass.cpp  construct_iter_iter_alloc.pass.cpp  construct_size.pass.cpp  construct_size_value.pass.cpp  construct_size_value_alloc.pass.cpp  copy.pass.cpp  copy_alloc.pass.cpp  default.recursive.pass.cpp  default_noexcept.pass.cpp  dtor_noexcept.pass.cpp  initializer_list.pass.cpp  initializer_list_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign_noexcept.pass.cpp  move_noexcept.pass.cpp  op_equal_initializer_list.pass.cpp
tests/containers/sequences/vector/vector.data/: data.pass.cpp  data_const.pass.cpp
tests/containers/sequences/vector/vector.modifiers/: emplace.pass.cpp  emplace_back.pass.cpp  emplace_extra.pass.cpp  erase_iter.pass.cpp  erase_iter_db1.pass.cpp  erase_iter_db2.pass.cpp  erase_iter_iter.pass.cpp  erase_iter_iter_db1.pass.cpp  erase_iter_iter_db2.pass.cpp  erase_iter_iter_db3.pass.cpp  erase_iter_iter_db4.pass.cpp  insert_iter_initializer_list.pass.cpp  insert_iter_iter_iter.pass.cpp  insert_iter_rvalue.pass.cpp  insert_iter_size_value.pass.cpp  insert_iter_value.pass.cpp  pop_back.pass.cpp  push_back.pass.cpp  push_back_exception_safety.pass.cpp  push_back_rvalue.pass.cpp
tests/containers/sequences/vector/vector.special/: db_swap_1.pass.cpp  swap.pass.cpp  swap_noexcept.pass.cpp
tests/strings/basic.string/: types.pass.cpp
tests/strings/basic.string/string.access/: at.pass.cpp  back.pass.cpp  db_back.pass.cpp  db_cback.pass.cpp  db_cfront.pass.cpp  db_cindex.pass.cpp  db_front.pass.cpp  db_index.pass.cpp  front.pass.cpp  index.pass.cpp
tests/strings/basic.string/string.capacity/: capacity.pass.cpp  clear.pass.cpp  empty.pass.cpp  length.pass.cpp  max_size.pass.cpp  over_max_size.pass.cpp  reserve.pass.cpp  resize_size.pass.cpp  resize_size_char.pass.cpp  shrink_to_fit.pass.cpp  size.pass.cpp
tests/strings/basic.string/string.cons/: alloc.pass.cpp  char_assignment.pass.cpp  copy.pass.cpp  copy_alloc.pass.cpp  copy_assignment.pass.cpp  default_noexcept.pass.cpp  dtor_noexcept.pass.cpp  initializer_list.pass.cpp  initializer_list_assignment.pass.cpp  iter_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign_noexcept.pass.cpp  move_assignment.pass.cpp  move_noexcept.pass.cpp  pointer_alloc.pass.cpp  pointer_assignment.pass.cpp  pointer_size_alloc.pass.cpp  size_char_alloc.pass.cpp  substr.pass.cpp
tests/strings/basic.string/string.iterators/: begin.pass.cpp  cbegin.pass.cpp  cend.pass.cpp  crbegin.pass.cpp  crend.pass.cpp  db_iterators_2.pass.cpp  db_iterators_3.pass.cpp  db_iterators_4.pass.cpp  db_iterators_5.pass.cpp  db_iterators_6.pass.cpp  db_iterators_7.pass.cpp  db_iterators_8.pass.cpp  end.pass.cpp  iterators.pass.cpp  rbegin.pass.cpp  rend.pass.cpp
tests/strings/basic.string/string.modifiers/string_append/: initializer_list.pass.cpp  iterator.pass.cpp  pointer.pass.cpp  pointer_size.pass.cpp  push_back.pass.cpp  size_char.pass.cpp  string.pass.cpp  string_size_size.pass.cpp
tests/strings/basic.string/string.modifiers/string_assign/: initializer_list.pass.cpp  iterator.pass.cpp  pointer.pass.cpp  pointer_size.pass.cpp  rv_string.pass.cpp  size_char.pass.cpp  string.pass.cpp  string_size_size.pass.cpp
tests/strings/basic.string/string.modifiers/string_copy/: copy.pass.cpp
tests/strings/basic.string/string.modifiers/string_erase/: erase_iter_db1.pass.cpp  erase_iter_db2.pass.cpp  erase_iter_iter_db1.pass.cpp  erase_iter_iter_db2.pass.cpp  erase_iter_iter_db3.pass.cpp  erase_iter_iter_db4.pass.cpp  iter.pass.cpp  iter_iter.pass.cpp  pop_back.pass.cpp  size_size.pass.cpp
tests/strings/basic.string/string.modifiers/string_insert/: iter_char.pass.cpp  iter_initializer_list.pass.cpp  iter_iter_iter.pass.cpp  iter_size_char.pass.cpp  size_pointer.pass.cpp  size_pointer_size.pass.cpp  size_size_char.pass.cpp  size_string.pass.cpp  size_string_size_size.pass.cpp
tests/strings/basic.string/string.modifiers/string_op_plus_equal/: char.pass.cpp  initializer_list.pass.cpp  pointer.pass.cpp  string.pass.cpp
tests/strings/basic.string/string.modifiers/string_replace/: iter_iter_initializer_list.pass.cpp  iter_iter_iter_iter.pass.cpp  iter_iter_pointer.pass.cpp  iter_iter_pointer_size.pass.cpp  iter_iter_size_char.pass.cpp  iter_iter_string.pass.cpp  size_size_pointer.pass.cpp  size_size_pointer_size.pass.cpp  size_size_size_char.pass.cpp  size_size_string.pass.cpp  size_size_string_size_size.pass.cpp
tests/strings/basic.string/string.modifiers/string_swap/: swap.pass.cpp
tests/strings/basic.string/string.nonmembers/string.io/: get_line.pass.cpp  get_line_delim.pass.cpp  get_line_delim_rv.pass.cpp  get_line_rv.pass.cpp  stream_extract.pass.cpp  stream_insert.pass.cpp
tests/strings/basic.string/string.nonmembers/string.special/: swap.pass.cpp  swap_noexcept.pass.cpp
tests/strings/basic.string/string.nonmembers/string_op!=/: pointer_string.pass.cpp  string_pointer.pass.cpp  string_string.pass.cpp
tests/strings/basic.string/string.nonmembers/string_op+/: char_string.pass.cpp  string_char.pass.cpp  (+3 more)
tests/strings/basic.string/string.require/: contiguous.pass.cpp
tests/support/: asan_testing.h
(+49 files in other folders)
