#   Copyright (C) 2017  Povilas Kanapickas <povilas@radix.lt>
#
#   Distributed under the Boost Software License, Version 1.0.
#       (See accompanying file LICENSE_1_0.txt or copy at
#           http://www.boost.org/LICENSE_1_0.txt)

macro(setup_single_test TARGET_NAME_LIST_OUT SRC_PATH)
    string(REGEX REPLACE "[^a-zA-Z0-9_]" "_" TARGET_NAME ${SRC_PATH})
    set(TARGET_NAME, test_${TARGET_NAME})
    list(APPEND ${TARGET_NAME_LIST_OUT} ${TARGET_NAME})

    add_executable(${TARGET_NAME} ${SRC_PATH})
    target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
    target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/tests/support)
    target_compile_options(${TARGET_NAME} PUBLIC "-std=c++11" "-O0" "-g2")
    add_test(test_${TARGET_NAME} ${TARGET_NAME})
endmacro()

set(DEPENDS_LIST "")

setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/at.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/back.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/db_back.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/db_cback.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/db_cfront.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/db_cindex.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/db_front.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/db_index.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/front.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.access/index.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/capacity.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/clear.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/empty.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/length.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/max_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/over_max_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/reserve.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/resize_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/resize_size_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/shrink_to_fit.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.capacity/size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/alloc.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/char_assignment.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/copy.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/copy_alloc.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/copy_assignment.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/default_noexcept.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/dtor_noexcept.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/initializer_list.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/initializer_list_assignment.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/iter_alloc.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/move.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/move_alloc.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/move_assign_noexcept.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/move_assignment.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/move_noexcept.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/pointer_alloc.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/pointer_assignment.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/pointer_size_alloc.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/size_char_alloc.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.cons/substr.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/begin.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/cbegin.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/cend.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/crbegin.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/crend.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_2.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_3.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_4.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_5.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_6.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_7.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/db_iterators_8.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/end.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/iterators.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/rbegin.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.iterators/rend.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/nothing_to_do.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/initializer_list.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/iterator.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/push_back.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/size_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_append/string_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/initializer_list.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/iterator.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/rv_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/size_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_assign/string_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_copy/copy.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/erase_iter_db1.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/erase_iter_db2.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/erase_iter_iter_db1.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/erase_iter_iter_db2.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/erase_iter_iter_db3.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/erase_iter_iter_db4.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/iter.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/iter_iter.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/pop_back.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_erase/size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/iter_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/iter_initializer_list.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/iter_iter_iter.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/iter_size_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/size_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/size_pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/size_size_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/size_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_insert/size_string_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_op_plus_equal/char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_op_plus_equal/initializer_list.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_op_plus_equal/pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_op_plus_equal/string.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/iter_iter_initializer_list.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/iter_iter_iter_iter.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/iter_iter_pointer.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/iter_iter_pointer_size.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/iter_iter_size_char.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/iter_iter_string.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/size_size_pointer.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/size_size_pointer_size.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/size_size_size_char.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/size_size_string.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_replace/size_size_string_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.modifiers/string_swap/swap.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/nothing_to_do.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.io/get_line.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.io/get_line_delim.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.io/get_line_delim_rv.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.io/get_line_rv.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.io/stream_extract.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.io/stream_insert.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.special/swap.pass.cpp")
#setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string.special/swap_noexcept.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op!=/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op!=/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op!=/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op+/char_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op+/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op+/string_char.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op+/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_op+/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_operator==/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_operator==/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_operator==/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_opgt/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_opgt/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_opgt/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_opgt=/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_opgt=/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_opgt=/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_oplt/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_oplt/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_oplt/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_oplt=/pointer_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_oplt=/string_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.nonmembers/string_oplt=/string_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/nothing_to_do.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string.accessors/c_str.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string.accessors/data.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string.accessors/get_allocator.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_compare/pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_compare/size_size_pointer.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_compare/size_size_pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_compare/size_size_string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_compare/size_size_string_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_compare/string.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find/char_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find/pointer_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find/string_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.not.of/char_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.not.of/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.not.of/pointer_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.not.of/string_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.of/char_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.of/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.of/pointer_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.first.of/string_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.not.of/char_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.not.of/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.not.of/pointer_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.not.of/string_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.of/char_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.of/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.of/pointer_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_find.last.of/string_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_rfind/char_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_rfind/pointer_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_rfind/pointer_size_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_rfind/string_size.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.ops/string_substr/substr.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/string.require/contiguous.pass.cpp")
setup_single_test(DEPENDS_LIST "strings/basic.string/types.pass.cpp")

add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose
                  DEPENDS ${DEPENDS_LIST})
